@@ -24,6 +24,8 @@ DIST binutils-2.18.tar.bz2 14962245 RMD160 78d07475667c55ecbf9068dbb90362a3445b2
 DIST binutils-2.19-patches-1.1.tar.bz2 8602 RMD160 36dc44461a658d7db616e5349a28b5e142c53be7 SHA1 f0cb6d8a59c2dc5af5e70ea89703fd5acc88393d SHA256 baac2b2d8161dbdf0f08aa141caae561c0054a58cd62beca1b905e03109e3655
 DIST binutils-2.19.1-patches-1.1.tar.bz2 9756 RMD160 99923c65490833a541caab8f4db70dd7d32e8104 SHA1 1044195484205d3ae5559aa04705612dd86ef4a8 SHA256 c0d94fd0f92b5d526d04252a532b8637b225e0d0d41a59d56b6967eb45a71690
 DIST binutils-2.19.1.tar.bz2 16245771 RMD160 330089af7cb5c6b3994febe8cd2af159218bc012 SHA1 88c91e36cde93433e4c4c2b2e3417777aad84526 SHA256 3e8225b4d7ace0a2039de752e11fd6922d3b89a7259a292c347391c4788739f6
+DIST binutils-2.19.51.0.10-patches-1.0.tar.bz2 7247 RMD160 fbd2cf9e64da50f64b4f3276a68366a00a2c42a1 SHA1 ccb9bae03953cf7cc31445d88188bfa276a87b3c SHA256 260de54df0e1f9eebf35f25152b1859e10f348b5c163d55db442062f4d6b87b9
+DIST binutils-2.19.51.0.10.tar.bz2 15851772 RMD160 b8669c43886e50c416e5202f73babed133945951 SHA1 16dad6ad36a80138a4c83d17470fb0a7a84e2045 SHA256 ebb55df9c9d76f9a1c087c998db4723ddaf0ae73080f9feb72cc705d784f6f44
 DIST binutils-2.19.51.0.8-patches-1.0.tar.bz2 7235 RMD160 4b615793b8e2f67955a349d2512c903684debeeb SHA1 c2259303c90118922a4ac11207eaa598f187a17d SHA256 18a5fe772e16733382fb63ed43e068d49483ebc8747e0573fea5fa14ad0d39d7
 DIST binutils-2.19.51.0.8.tar.bz2 15796254 RMD160 4a20565e9953211ad0332b9af3867169177d727c SHA1 6e4f29a98172c8bc5f10adcea286195fbabebc6c SHA256 987db3733a62520dfc367fe3bca64888ce7eb7052488ee10ba9a33bf01947ed1
 DIST binutils-2.19.51.0.9-patches-1.0.tar.bz2 7231 RMD160 4d45d2fa2c75b1fab2113a2da1a954d3ad2da4d2 SHA1 50557479e9b9d5bcdf82ac2c3ffe3e39dffd6913 SHA256 c369643893ebcf694a1fee5a81dd2b58b8ac0d506725fe68bf3baf501bc1eb86
@@ -34,8 +36,9 @@ EBUILD binutils-2.17.50.0.17.ebuild 724 RMD160 31935504ee101cd0cc00aac5c7289a0f1
 EBUILD binutils-2.18-r4.ebuild 2153 RMD160 f6d35b1e5668566de8bab18128a28163ccdcdb89 SHA1 c640e2778f7a0b3508fcf6131850e56ed052c087 SHA256 b2be0da458b8cf2681a58c9bcf80481d49e483dd1842ce5c30d8bd5d7a76a022
 EBUILD binutils-2.18.50.0.9.ebuild 869 RMD160 731677752543ce29594a917dfa76130c1bcf3eae SHA1 40a038bab509183c2b51b3629b86708ce7426404 SHA256 e9fee56b557da932ae5ebc8455f86833bebda9534f3f7b70c255fe71ea4d8c67
 EBUILD binutils-2.19.1-r01.1.ebuild 858 RMD160 a502ead0677e59dd876114fba1a0de6ac292c2ca SHA1 fbf576fe6647289d01279163ea7ea041ec2164b6 SHA256 1fa0a19b3c445f55d57fc695d7e38805ef403ebdae9de07f2f5731dc5b317a0c
+EBUILD binutils-2.19.51.0.10.ebuild 639 RMD160 23f9098a82a418bc5a6e7392f7bfff27fe4c26d4 SHA1 60a828afd36abeeddaf18a529a0fb45ea44d7bee SHA256 be5a9e2566e0cc54efece05b943605750b3370155e645f2895cc7035579a15c7
 EBUILD binutils-2.19.51.0.8.ebuild 638 RMD160 53aaa4088b2fc038af81e25a6e23ad7c1f13dad7 SHA1 a07e43eb25942b2ae5610fd5653909ed0e78481f SHA256 65e9fa1fd37552a1550f7d89ab88d16324ff26e129420eb073dd6d4e63e293a4
 EBUILD binutils-2.19.51.0.9.ebuild 638 RMD160 f0fb4891f119bfc1fb4adb40493510970f621ffd SHA1 d705cc6a92cf0d8b0077d0d6b3151c668f20e9b0 SHA256 ec76ead0ef577f4fe27cffe97d2b0b1fcda374917eeea1615dc4b6fccc16b150
 EBUILD binutils-2.19.ebuild 845 RMD160 f0b9cf67c3c7db333fa32681233b5a1c93098a3d SHA1 58dced1634469817b23cc07723778fea75091ab4 SHA256 55f1f8a8d852fc6ae3efb5c1783a694b6bd6eb116cc967621a396ef1ed9edc25
-MISC ChangeLog 62843 RMD160 ca0248d17c2f40962b56016e2fe574a2bd365ecb SHA1 5b3a14f4cb2f4c4e0afb05e0c42338b4b41c6ca4 SHA256 ac54e41f21e407c0d19f48dbc1d76821cb78e30c729eb0993d269ecdb76f2ac9
+MISC ChangeLog 62981 RMD160 aab67a93570203fb7b60da3401082382a83cf25d SHA1 8848e099023d70472b384bd201e3cd36ad822913 SHA256 762832aa56dfd08dbd4eee67c19cc7b1ade1793e21cc8a31bc09592e4182d41f
 MISC metadata.xml 511 RMD160 84535ecd31e21020a41f3d173a294f03c5951da0 SHA1 1a40f6d427a9e3b64a15967b9b442d8cd65d40bb SHA256 ceac2610b009f7a25946ad186496cb7d761a495820ed6b67be9b560dda223c39
