@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/binutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.361 2009/06/07 10:45:57 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.362 2009/06/19 13:51:31 vapier Exp $
+
+*binutils-2.19.51.0.10 (19 Jun 2009)
+
+  19 Jun 2009; Mike Frysinger <vapier@gentoo.org>
+  +binutils-2.19.51.0.10.ebuild:
+  Version bump.
 
 *binutils-2.19.51.0.9 (07 Jun 2009)
 
